--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
             </div>
             <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
             <h1 class="nom headerText">mon-cordon-precieux.fr</h1>
-            <h2 class="slogan headerText">Tout savoir sur le don de cordon !</h2>
+            <h2 class="slogan headerText">Tout savoir sur le don de cordon à usage scientifique !</h2>
             <label id="nav-btn" for="NavToggle">
                 <div class="menu-btn">
                     <div class="menu-btn-burger"></div>
@@ -37,7 +37,7 @@
             </label>
                 <ul class="menuItems">
                     
-                    <li><a href={{path ('cestquoi')}}>Qu'est-ce que le don ?</a></li>
+                    <li><a href={{path ('cestquoi')}}>Qu'est-ce que c'est ?</a></li>
                     <li><a href={{path ('pourquoi')}}>Pourquoi ?</a></li>
                     <li><a href={{path ('comment')}}>Comment ?</a></li>
                     <li><a href={{path ('quand')}}> Quand ?</a></li>
