--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -14,13 +14,13 @@
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner</a>  des patients atteints de diverses maladies du sang.
+    Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner des patients</a> atteints de diverses maladies du sang.
     <br><br>
     Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
     <br><br>
     Celui-ci peut servir pour deux usages : thérapeutique ou scientifique.
     <br><br>
-    <h2>Le don du sang de cordon thérapeutique </h2>
+    <h2>Le don du sang de cordon à usage thérapeutique </h2>
     <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
     Cependant, il se peut que le don de sang de cordon soit non conforme pour être greffé à un patient. Il peut alors être réorienté vers un usage scientifique et servir à la recherche.
@@ -46,17 +46,20 @@
                         <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                         <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
                     </div>
-                    <h2>Prise de sang à la maman et prélèvement de sang de cordon</h2>
+                    <h2>Le jour de l'accouchement : prise de sang à la maman et prélèvement de sang de cordon</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
-                    <h2>Anonymisation et traitement de la poche par L'EFS</h2>
+                    <h2>Anonymisation et traitement de la poche par la banque de sang placentaire</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/event.svg')}}>
+                    <h2>Un mois après l'accouchement: questionnaire médical</h2>
                     <div class="doubleArrow">
                         <i id="conforme" class="fas fa-long-arrow-alt-right fa-4x"></i>
                         <i id="pasConforme" class="fas fa-long-arrow-alt-right fa-4x"></i>
                     </div>
                     <div class="doubleSchema">
                         <div class="conforme">
-                            <p>Conforme</p>
+                            <p>Don conforme</p>
                             <img class="icon" src={{ asset ('img/icons/blood-bank.svg')}}>
                             <p>Stockage par la banque de sang placentaire</p>
                             <i id="arrowConforme" class="fas fa-long-arrow-alt-right fa-4x"></i>
@@ -64,16 +67,16 @@
                             <p>Greffe hématopoïétique au patient</p>
                         </div>
                         <div class="pasConforme">
-                            <p>Non conforme</p>
+                            <p>Don non conforme</p>
                             <img class="icon" src={{ asset ('img/icons/recycling-bin.svg')}}>
-                            <p>Destruction de la poche</p>
+                            <p>Destruction de la poche de sang</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <h2>Le don de sang de cordon scientifique</h2>
+    <h2>Le don de sang de cordon à usage scientifique</h2>
     <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
     <br>
     Donner son sang de cordon, c’est aider la recherche !
@@ -93,11 +96,14 @@
                     <img class="icon" src={{ asset ('img/icons/contract.svg')}}>
                     <h2>La maman donne son consentement</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                    <h2>Anonymisation et traitement de la poche par la banque de sang placentaire</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <div class="prelevement">
                         <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                         <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
                     </div>
-                    <h2>Prise de sang à la maman et prélèvement de sang de cordon</h2>
+                    <h2>Le jour de l'accouchement : prise de sang à la maman et prélèvement de sang de cordon</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img id="logolbk" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
                     <h2>Traitement de la poche par Lymphobank</h2>
@@ -106,7 +112,7 @@
                     <h2>Stockage par Lymphobank</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
-                    <h2>Laboratoires de recherche</h2>
+                    <h2>Utilisation par les laboratoires de recherche</h2>
                 </div>
             </div>
         </div>
@@ -116,7 +122,7 @@
     
     <button class="accordion"><p class="accordionTitle">Le sang de cordon</p></button>
         <div class="panel">
-            <p>Lorsque le cordon ombilical est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. Le sang de cordon est utilisé pour produire : 
+            <p>Après que le cordon ombilical ait été coupé, une ponction est réalisée dans la veine du cordon reliée au placenta. Le sang de cordon est utilisé pour produire : 
         <ul class="prodCordon">
             <li>des cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
             -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
@@ -135,35 +141,41 @@
         Le cordon ombilical est récupéré après avoir prélevé le sang de cordon. Il permet d’isoler :
         <br><br>
         <ul class="prodCordon">
-            <li>les cellules souches <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de thérapie cellulaire <span class="tooltip">régénératrice<span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span></li>
+            <li>les cellules souches <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de thérapie cellulaire <span class="tooltip">régénératrice. <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span>Le placenta est également une source de cellules souches mésenchymateuses.</li>
             <li>les cellules <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.</li>        
         </ul>
         </p>
     </div>
-    <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
 
     <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
-    {# <div class="schemaDon">
-        <div class="schemaDonStart">
-            <button class="schemaToogle"><img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}></button>
-        </div>
-        <div class="schemaDonSteep1">
-            <div class="doubleFleche">
-                <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
-                <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+    <div class="cardsHosto" id="schemaDon">
+        <div class="card">
+            <div class="card-pic">
+                <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
             </div>
-            <div class="sangCordon">
-                <div class="sangSteep1">
-                    <h2>Sang de cordon</h2>
-                    <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                </div>
-                <div class="cordonSteep1">
-                    <h2>Cordon ombilical</h2>
-                    <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
+            <button class="btnCard"><p>En savoir plus</p></button>
+            <div class="panelCard">
+                <div class="schemaCard">
+                    <div class="schemaDonSteep1">
+                        <div class="doubleFleche">
+                            <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+                            <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+                        </div>
+                        <div class="sangCordon">
+                            <div class="sangSteep1">
+                                <h2>Sang de cordon</h2>
+                                <img id="pocheIcon" class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                            </div>
+                            <div class="cordonSteep1">
+                                <h2>Cordon ombilical</h2>
+                                <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div> #}
+    </div>
     <h1>Quel usage pour ce don ?</h1>
     <p>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p>
     <h2 id="cardsRechercheTitle">Recherches appliquées :</h2>
@@ -197,6 +209,6 @@
 {% endblock %}
     
 {% block javascripts %}
-    {{ encore_entry_script_tags('js/schemaToogle') }}
+
 {% endblock %}
 
