--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -58,11 +58,11 @@
             <h2>Le cordon apparaît vide et principalement blanc, habituellement après 2-4 minutes</h2></div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="iconSchema"><h2 class="nb">6.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
-            <h2>Une prise de sang est effectuée sur la maman pour analyses (VIH, VHB, VHD)</h2></div>
+            <h2>Une prise de sang est effectuée sur la maman pour analyses de sang</h2></div>
         </div>
     </div>
     <h2>Après l’accouchement</h2>
-    <p>Votre bébé et vous-même êtes pris en charge par l’équipe médicale. En ce qui concerne votre prélèvement, voici son devenir : </p>
+    <p>Votre bébé et vous-même êtes pris en charge par l’équipe médicale. En ce qui concerne votre don, voici son devenir : </p>
         <div class="schemaDevenir">
             <div class="devenir">
                 <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
@@ -71,12 +71,12 @@
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="devenir">
                 <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
-                <h2>Transfert sous 24h à l'EFS</h2>
+                <h2>Transfert sous 24h à l'EFS-BFC</h2>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="devenir">
                 <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
-                <h2>Anonymisation du prélèvement et qualification du don</h2>
+                <h2>Anonymisation et qualification du don</h2>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="devenir">
@@ -86,16 +86,16 @@
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="devenir">
                 <img id="LogoIcon" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
-                <h2>Valorisation du don </h2>
+                <h2>Valorisation du don pour la recherche</h2>
             </div>
         </div>
-    <p>Si vous souhaitez connaître le devenir de votre don vous pourrez contacter l’EFS ou LYMPHOBANK, vous pourrez avoir des informations sur l’utilisation de votre prélèvement. </p>
+    <p>Si vous souhaitez connaître le devenir de votre don, vous pouvez contacter l’EFS-BFC au 03.81.615.675 qui transmettra votre demande à Lymphobank. </p>
     <div class="cardsConditions">
         <div class="card">
             <div class="card-title"><h2>Conditions pour lesquelles le prélèvement a lieu :</h2></div>
             <div class="contentCard">
                 <ul>
-                    <li>Le bébé n’est pas prématuré (37 semaines d’aménorrhées respectées)</li>
+                    <li>Le bébé n’est pas prématuré (37 semaines d’aménorrhées minimun)</li>
                     <li>Lors d’une césarienne programmée (le prélèvement aura lieu une fois le placenta ait été expulsé)</li>
                     <li>Lors d’un accouchement par voie basse (soit en attendant que le placenta soit expulsé soit lorsqu’il est déjà sorti)</li>
                     <li>Une fois que le cordon ombilical est coupé</li>
