--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -11,9 +11,9 @@
 {% block body %}
     <h1>Qui sommes-nous ?</h1>
     <h2>Notre histoire</h2>
-    <p><a href="/">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique. Il a été créé par :
+    <p><a href="/">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique.
     <br><br>
-    LYMPHOBANK est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) afin de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, LYMPHOBANK mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang ou de sang de cordon à des laboratoires de recherche.
+    LYMPHOBANK est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) dans le but de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, LYMPHOBANK mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang adultes ou de sang de cordon à des laboratoires de recherche.
     </p>
     <h2>Notre mission</h2>
     <p>‘’Accompagner la recherche, c’est accompagner la vie’’ : tel est notre credo. Nous souhaitons être un partenaire de référence dans la réalisation des projets de recherche de nos clients en leur faisant gagner du temps et de la sérénité pour l’obtention de produits fiables issus du sang.</p>
@@ -70,48 +70,20 @@
     </div>
     <p><strong>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante d'immunothérapie du cancer.</strong></p>
     <h2>Nos engagements</h2>
-    <p>Notre investissement envers nos partenaires se traduit par la mise en place d’une démarche Qualité ISO 9001, afin de garantir une qualité optimale de nos produits et services.
+    <p>Soyons clairs : les donneurs et les donneuses donnent leur sang, adulte ou placentaire, pour sauver des vies ou pour faire avancer la recherche. Ils ne donnent pas pour qu’une société privée gagne de l’argent ‘’sur leur dos’’.
     <br><br>
-    Cette démarche Qualité a été récompensée par l’obtention du niveau 2 de la certification AFAQ 9001 par étapes, délivrée par AFNOR Certification le 16 janvier 2020, pour notre activité de cession de cellules sanguines.
-    </p>
-    <div class="iso">
-        <img class="isoIcon" src={{ asset ('img/iso9001.png')}}>
-        <ul class="isoText">
-            <li>Niveau 1 : étape destinée à garantir la maîtrise de nos processus de production et de qualification des cellules</li>
-            <br>
-            <li>Niveau 2 : étape centrée sur la maîtrise de l'organisation interne : actions préventives et correctives, processus support</li>
-        </ul>
-    </div>
-    <br>
-    <p>C'est la récompense le travail de structuration de nos activités de préparation, de conservation, de constitution et de distribution de collections d'échantillons biologiques au travers de la valorisation de produits issus de dons de sang.</p>
+    Notre engagement de non-profit personnel signifie que les bénéfices réalisés par la société, au travers de son activité industrielle liée au don du sang, sont intégralement réutilisés pour le financement du projet de recherche qu’elle mène en collaboration avec l’EFS-BFC : aucun dividende n’est reversé au Président, fondateur de la société, ni à d’éventuels associés ou futurs investisseurs.
+    <br><br>
+    Les bilans comptables de la société sont transmis chaque année à un Comité de Surveillance indépendant qui peut ainsi vérifier le respect par Lymphobank de ses engagements éthiques et financiers.</p>
     <h2>Notre équipe</h2>
-    <p>La complémentarité des expertises de notre équipe nous a permis de structurer l’industrialisation de nos démarches.
-    </p>
-    <div class="valeurs">
-        <div class="card">
-            <div class="card-title"><h2>Quelle que soit la prestation, ces protocoles industriels sont respectés pour leur performance et la maîtrise des process.</h2></div>
-            <div class="contentCard">
-                <ul>
-                    <li>Connaissance de la composition des cellules contaminantes</li>
-                    <li>Maîtrise des risques de contamination VHB, VHC et VIH (garantie par l'EFS)</li>
-                    <li>Quantité contrôlée du nombre minimum de cellules produite par ampoule</li>
-                    <li>Justification par lot du protocole de fabrication (viabilité, pureté, analyse microbienne et virale)</li>
-                    <li>Maîtrise et traçabilité du processus de congélation</li>
-                    <li>Traçabilité totale par marquage individuel des ampoules et par lot</li>
-                    <li>Optimisation du volume de stockage</li>
-                    <li>RGPD respectée et Double anonymisation</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <h2>Notre équipe est composée 5 personnes expérimentée : </h2>
+    <h2>Notre équipe est composée 5 personnes expérimentées : </h2>
     <img class="photo" src={{ asset ('img/equipe.jpg')}}>
     <ul class="equipe">
-        <li><strong>Marine DANGEVILLE :</strong> Responsable de production & Relations fournisseurs</li>
-        <li><strong>Mathieu GONCALVES :</strong> Responsable R&D</li>
+        <li><strong>Marine DANGEVILLE :</strong> Responsable de production</li>
+        <li><strong>Mathieu GONCALVES :</strong> Responsable Recherche &développement</li>
         <li><strong>Satya LEFRANC :</strong> Technicienne de production en Biotechnologie</li>
         <li><strong>Lucie LAURENT </strong>: Technicienne de production en Biotechnologie</li>
-        <li><strong>Eric ROBINET :</strong> Direction & Pilotage Relation Clients</li>
+        <li><strong>Eric ROBINET :</strong> Direction</li>
     </ul>
     <h2>Domaine d’applications (principaux secteurs d’activités)</h2>
     <div class="valeurs">
