--- a/assets/styles/card.scss
+++ b/assets/styles/card.scss
@@ -17,6 +17,7 @@ $fond :#fffdf0;
     align-items: center;
     justify-content: space-between;
     transition: max-height 0.35s ease-out;
+    /* transition: min-height 0.35s ease-out; */
     .card-title{
         font-size: 0.6em;
         height: 50px;
@@ -85,6 +86,7 @@ $fond :#fffdf0;
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.35s ease-out;
+        /* transition: min-height 0.35s ease-out; */
         position: relative;
     p{
         text-align: center;
