--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -124,22 +124,27 @@ $fond :#fffdf0;
 
 
 //schema que peut on donner ?
-.schemaDon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    .schemaDonStart{
-        display: flex;
-        #pregnantIcon{
-            transform: scaleX(-1);
+#schemaDon{
+    .card{
+        width: 100%;
+        height: auto;
+        min-height: 0;
+        border: none;
+        position: relative;
+        .btnCard{
+            position: absolute;
+            top: 2em;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            height: 200px;
+            opacity: 0;
+        }
+        .schemaCard{
+            align-items: space-around;
         }
     }
-    
-
     .schemaDonSteep1{
-        max-height: 0;
-        visibility: hidden;
         width: 100%;
         .doubleFleche{
             display: flex;
@@ -179,8 +184,9 @@ $fond :#fffdf0;
             }
         }
     }
-    
 }
+
+    
 
 
 
