--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -68,14 +68,13 @@
             </div>
         </div>
     </div>
-    <p><strong>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante d'immunothérapie du cancer.</strong></p>
+    <p><strong>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante <span class="tooltip">d'immunothérapie<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span><span class="tooltip"> du cancer.<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span></strong></p>
     <h2>Nos engagements</h2>
     <p>Soyons clairs : les donneurs et les donneuses donnent leur sang, adulte ou placentaire, pour sauver des vies ou pour faire avancer la recherche. Ils ne donnent pas pour qu’une société privée gagne de l’argent ‘’sur leur dos’’.
     <br><br>
     Notre engagement de non-profit personnel signifie que les bénéfices réalisés par la société, au travers de son activité industrielle liée au don du sang, sont intégralement réutilisés pour le financement du projet de recherche qu’elle mène en collaboration avec l’EFS-BFC : aucun dividende n’est reversé au Président, fondateur de la société, ni à d’éventuels associés ou futurs investisseurs.
     <br><br>
     Les bilans comptables de la société sont transmis chaque année à un Comité de Surveillance indépendant qui peut ainsi vérifier le respect par Lymphobank de ses engagements éthiques et financiers.</p>
-    <h2>Notre équipe</h2>
     <h2>Notre équipe est composée 5 personnes expérimentées : </h2>
     <img class="photo" src={{ asset ('img/equipe.jpg')}}>
     <ul class="equipe">
