--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -10,11 +10,22 @@
 
 {% block body %}
     <h1>Qu'est-ce que le don de sang de cordon ?</h1>
-    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
-    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner des patients</a> atteints de diverses maladies du sang.
+    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    <br><br> 
+    - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    <br><br>
+    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    <br><br> 
+    - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    <br><br>
+    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+    <br><br> 
+    - Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner des patients</a> atteints de diverses maladies du sang.
     <br><br>
     Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
     <br><br>
@@ -124,13 +135,25 @@
         <div class="panel">
             <p>Après que le cordon ombilical ait été coupé, une ponction est réalisée dans la veine du cordon reliée au placenta. Le sang de cordon est utilisé pour produire : 
         <ul class="prodCordon">
-            <li>des cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-            -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-            <br><br>
-            -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-            Plaquettes : aident le sang à coaguler</span></span>. Elles servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes</li>
-            <li>des cellules <span class="tooltip">immunitaires <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span>, sources de biomédicaments contre le cancer</li>
-            <li>du <span class="tooltip">sérum<span class="tooltipText">Le sérum est le liquide dans lequel baignent les cellules sanguines (globules rouges, globules blancs, plaquettes).</span></span> placentaire, qui remplace de sérum d’origine animale, supplément indispensable dans les milieux de culture cellulaire</li>
+            <li>des cellules souches <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        <br><br>
+        -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+        <br><br> 
+        - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        <br><br>
+        -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+        <br><br> 
+        - Plaquettes : aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        <br><br>
+        -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
+        <br><br> 
+        - Plaquettes : aident le sang à coaguler</span></span>. Elles servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes</li>
+
+        <li>des <span class="tooltip">cellules <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span> <span class="tooltip">immunitaires <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span>, sources de biomédicaments contre le cancer</li>
+        <li>du <span class="tooltip">sérum<span class="tooltipText">Le sérum est le liquide dans lequel baignent les cellules sanguines (globules rouges, globules blancs, plaquettes).</span></span> placentaire, qui remplace de sérum d’origine animale, supplément indispensable dans les milieux de culture cellulaire</li>
         </ul>
         </p>
     </div>
@@ -141,8 +164,8 @@
         Le cordon ombilical est récupéré après avoir prélevé le sang de cordon. Il permet d’isoler :
         <br><br>
         <ul class="prodCordon">
-            <li>les cellules souches <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de thérapie cellulaire <span class="tooltip">régénératrice. <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span>Le placenta est également une source de cellules souches mésenchymateuses.</li>
-            <li>les cellules <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.</li>        
+            <li>les <span class="tooltip">cellules <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">souches <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de   <span class="tooltip">thérapie <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">cellulaire <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">régénératrice. <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> Le placenta est également une source de cellules souches mésenchymateuses.</li>
+            <li>les <span class="tooltip">cellules<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span> <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude <span class="latin">in vitro</span> de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.</li>        
         </ul>
         </p>
     </div>
