--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -25,7 +25,7 @@
     <br><br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries
     <br><br> 
-    - Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/">soigner des patients</a> atteints de diverses maladies du sang.
+    - Plaquettes : aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour <a href="https://www.dondesangdecordon.fr/" target="_blank" rel="noopener noreferrer">soigner des patients</a> atteints de diverses maladies du sang.
     <br><br>
     Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
     <br><br>
@@ -36,7 +36,7 @@
     <br>
     Cependant, il se peut que le don de sang de cordon soit non conforme pour être greffé à un patient. Il peut alors être réorienté vers un usage scientifique et servir à la recherche.
     <br><br>
-    Pour en savoir plus sur le don de sang de cordon à usage thérapeutique, vous pouvez consulter le site de <a href="https://www.dondesangdecordon.fr/don.php">l’Agence de la Biomédecine.</a>
+    Pour en savoir plus sur le don de sang de cordon à usage thérapeutique, vous pouvez consulter le site de <a href="https://www.dondesangdecordon.fr/don.php" target="_blank" rel="noopener noreferrer">l’Agence de la Biomédecine.</a>
     </p></div>
     <div class="cardsHosto">
         <div class="card">
