--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -19,7 +19,7 @@
                 <p>Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations. </p>  
             </div>
         </div>
-        <a href="/Ou"><button id="reseau">Découvrir notre Réseau</button></a>
+        <a href="/Ou" target="_blank" rel="noopener noreferrer"><button id="reseau">Découvrir notre Réseau</button></a>
     </div>
     <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV à la maternité</p></button>
     <div class="panel">
