--- a/templates/pages/Faq.html.twig
+++ b/templates/pages/Faq.html.twig
@@ -13,7 +13,7 @@
         <button class="accordion"><p class="accordionTitle">{{faq.ordre}}. {{faq.question}}</p></button>
         <div class="panel">
             <p>{{faq.reponse}}</p>
-            <p>Plus d'information : <a href={{faq.lien}}>{{faq.NomLien}}</a></p>
+            <p>Plus d'information : <a href={{faq.lien}} target="_blank" rel="noopener noreferrer">{{faq.NomLien}}</a></p>
         </div>
     {% endfor %}
 {% endblock %}
