--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -21,27 +21,65 @@ $fond :#fffdf0;
 }
 
 .carousel__item{
+    height: 100%;
     padding: 0 40px;
     float: left;
+    transform: scale(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.carousel__item:hover{
+    transform: scale(104%);
 }
 
 .carousel__next, .carousel__prev{
     position: absolute;
-    width: 40px;
-    height: 40px;
-    background-color: $pastel;
+    width: 30px;
+    height: 70px;
     top: 50%;
     margin-top: -20px;
     right: 0;
     cursor: pointer;
     transition: transform 0.3s;
+    border-radius: 15px 0 0 15px;
+    background: $pastel url(next.svg) center center no-repeat;
 }
 
 .carousel__next:hover, .carousel__prev:hover{
     transform: scale(1.2);
+    background: $pastelHover url(next.svg) center center no-repeat;
 }
 
 .carousel__prev{
     right: auto;
     left: 0;
+    border-radius: 0 15px 15px 0;
+    background: $pastel url(prev.svg) center center no-repeat;
+}
+
+.carousel__prev:hover{
+    background: $pastelHover url(prev.svg) center center no-repeat;
+}
+
+.carousel__pagination{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.carousel__pagination__button{
+    background-color: $pastel;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 3px;
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+
+.carousel__pagination__button--active, .carousel__pagination__button:hover{
+    transform: scale(1.4);
 }
